fixes and max tokens

--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -46,7 +46,7 @@ Instead of opaque unrelated strings, IDs are hierarchical so parent/child relati
 - `TurnId = { run_id, turn_seq }`
 - `StepId = { turn_id, step_seq }`
 
-This allows deterministic incrementing in reducer state and avoids cross-host UUID generation concerns.
+This allows deterministic incrementing in reducer state while limiting UUID generation to the session boundary.
 
 ## Scope
 
@@ -55,7 +55,9 @@ This allows deterministic incrementing in reducer state and avoids cross-host UU
    - `aos.agent/RunId@1`
    - `aos.agent/TurnId@1`
    - `aos.agent/StepId@1`
+   - `aos.agent/ReasoningEffort@1`
    - `aos.agent/SessionConfig@1`
+   - `aos.agent/RunConfig@1`
    - `aos.agent/SessionLifecycle@1`
    - `aos.agent/HostCommand@1`
    - `aos.agent/SessionEventKind@1`
@@ -64,7 +66,7 @@ This allows deterministic incrementing in reducer state and avoids cross-host UU
 2. Define lifecycle states and transitions:
    - `Idle`, `Running`, `WaitingInput`, `Paused`, `Cancelling`, `Completed`, `Failed`, `Cancelled`
 3. Define control observation semantics:
-   - `steer`, `follow_up`, `reconfigure`, `pause`, `resume`, `cancel`
+   - `steer`, `follow_up`, `pause`, `resume`, `cancel`
 4. Define epoch fences to ignore stale completions:
    - `session_epoch`
    - `step_epoch`
@@ -81,7 +83,7 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
 {
   "$kind": "defschema",
   "name": "aos.agent/SessionId@1",
-  "type": { "text": {} }
+  "type": { "uuid": {} }
 }
 ```
 
@@ -129,6 +131,57 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
 ```json
 {
   "$kind": "defschema",
+  "name": "aos.agent/ReasoningEffort@1",
+  "type": {
+    "variant": {
+      "Low": { "unit": {} },
+      "Medium": { "unit": {} },
+      "High": { "unit": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/SessionConfig@1",
+  "type": {
+    "record": {
+      "provider_profile_id": { "option": { "text": {} } },
+      "provider": { "option": { "text": {} } },
+      "model": { "option": { "text": {} } },
+      "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
+      "max_tokens": { "option": { "nat": {} } }
+    }
+  }
+}
+```
+
+`SessionConfig@1` and `RunConfig@1` intentionally share the same field shape.
+They remain separate schema names because they have different lifecycle meaning:
+- `SessionConfig@1`: mutable defaults for future runs.
+- `RunConfig@1`: resolved immutable snapshot for one active run.
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/RunConfig@1",
+  "type": {
+    "record": {
+      "provider_profile_id": { "option": { "text": {} } },
+      "provider": { "text": {} },
+      "model": { "text": {} },
+      "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
+      "max_tokens": { "option": { "nat": {} } }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
   "name": "aos.agent/SessionLifecycle@1",
   "type": {
     "variant": {
@@ -151,13 +204,14 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
   "name": "aos.agent/HostCommand@1",
   "type": {
     "record": {
-      "command_id": { "text": {} },
-      "issued_at_ns": { "nat": {} },
+      "command_id": { "uuid": {} },
+      "target_run_id": { "option": { "ref": "aos.agent/RunId@1" } },
+      "expected_session_epoch": { "option": { "nat": {} } },
+      "issued_at": { "time": {} },
       "command": {
         "variant": {
           "Steer": { "record": { "text": { "text": {} } } },
           "FollowUp": { "record": { "text": { "text": {} } } },
-          "Reconfigure": { "record": { "patch": { "bytes": {} } } },
           "Pause": { "unit": {} },
           "Resume": { "unit": {} },
           "Cancel": { "record": { "reason": { "option": { "text": {} } } } }
@@ -169,6 +223,14 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
 ```
 
 `command_id` exists for idempotency and audit (host retries should not double-apply control).
+`target_run_id` scopes the command to a specific run when provided.
+`expected_session_epoch` is an optional optimistic-concurrency fence to reject stale control actions.
+
+### Host command targeting semantics
+
+- If `target_run_id` is present: apply only if it matches the active run, otherwise reject as stale/invalid target.
+- If `target_run_id` is absent: apply to current active run (best-effort convenience path).
+- If `expected_session_epoch` is present: apply only when it matches current session epoch.
 
 ### Session State
 
@@ -185,13 +247,15 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
       "next_run_seq": { "nat": {} },
       "next_turn_seq": { "nat": {} },
       "next_step_seq": { "nat": {} },
+      "session_config": { "ref": "aos.agent/SessionConfig@1" },
       "active_run_id": { "option": { "ref": "aos.agent/RunId@1" } },
+      "active_run_config": { "option": { "ref": "aos.agent/RunConfig@1" } },
       "active_turn_id": { "option": { "ref": "aos.agent/TurnId@1" } },
       "active_step_id": { "option": { "ref": "aos.agent/StepId@1" } },
       "pending_steer": { "list": { "text": {} } },
       "pending_follow_up": { "list": { "text": {} } },
-      "created_at_ns": { "nat": {} },
-      "updated_at_ns": { "nat": {} }
+      "created_at": { "time": {} },
+      "updated_at": { "time": {} }
     }
   }
 }
@@ -223,10 +287,15 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
   "name": "aos.agent/SessionEventKind@1",
   "type": {
     "variant": {
-      "RunRequested": { "record": { "input_ref": { "hash": {} } } },
+      "RunRequested": {
+        "record": {
+          "input_ref": { "hash": {} },
+          "run_overrides": { "option": { "ref": "aos.agent/SessionConfig@1" } }
+        }
+      },
       "RunStarted": { "unit": {} },
       "HostCommandReceived": { "ref": "aos.agent/HostCommand@1" },
-      "HostCommandApplied": { "record": { "command_id": { "text": {} } } },
+      "HostCommandApplied": { "record": { "command_id": { "uuid": {} } } },
       "LifecycleChanged": { "ref": "aos.agent/SessionLifecycle@1" },
       "RunCompleted": { "unit": {} },
       "RunFailed": { "record": { "code": { "text": {} }, "detail": { "text": {} } } },
@@ -238,11 +307,21 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
 
 `SessionEvent` is an envelope so correlation fields are always present and uniform for tooling.
 
+## Model Mutability Rule
+
+Model/provider can change within a session, but only at run boundaries:
+
+1. Session stores mutable defaults in `session_config`.
+2. `RunRequested.run_overrides` may override those defaults for the next run.
+3. On `RunStarted`, reducer resolves and snapshots `active_run_config`.
+4. `active_run_config.provider` and `active_run_config.model` are immutable until run terminal state.
+5. Next run may use different resolved model/provider.
+
 ## Runtime Use of IDs (example timeline)
 
-Given `session_id = "chat-42"`:
+Given `session_id = "550e8400-e29b-41d4-a716-446655440000"`:
 
-1. First input starts `run_id = {session_id:"chat-42", run_seq:1}`.
+1. First input starts `run_id = {session_id:"550e8400-e29b-41d4-a716-446655440000", run_seq:1}`.
 2. First model round starts `turn_id = {run_id, turn_seq:1}`.
 3. Steps progress:
    - `step_id(..., step_seq:1)` for `LlmStepRequested`
