--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -10,6 +10,44 @@ Establish the base session lifecycle and host-control contract so every agent ap
 
 This stage resolves the primary gap from concern #1 (host-control underspecified) and lays schema foundations used by all later stages.
 
+## Why Multiple IDs
+
+We need four identity levels because they solve different problems:
+
+- `session_id`: stable identity for long-lived conversation/state.
+- `run_id`: identity for one execution attempt inside a session.
+- `turn_id`: identity for one LLM round within a run.
+- `step_id`: identity for one fine-grained action boundary inside a turn.
+
+If we collapse these into one ID, we lose deterministic cancellation fences, traceability, and clean operator controls.
+
+### Function of each ID
+
+1. `session_id`
+   - Reducer cell key (`key_field` target).
+   - Long-lived memory boundary (settings/history/cache).
+   - Used by UI/API as the durable handle.
+2. `run_id`
+   - Distinguishes separate executions in the same session.
+   - Terminal state boundary (`Completed`/`Failed`/`Cancelled`) is per run.
+   - Needed so late receipts from old runs can be ignored.
+3. `turn_id`
+   - Groups one LLM request/response cycle.
+   - Correlates tool calls/results to the exact model response that produced them.
+4. `step_id`
+   - Total ordering inside a turn for host-control observation and event replay analysis.
+   - Causation anchor for effect intents/receipts and diagnostics.
+
+## Identity Model (hierarchical)
+
+Instead of opaque unrelated strings, IDs are hierarchical so parent/child relationships are explicit:
+
+- `RunId = { session_id, run_seq }`
+- `TurnId = { run_id, turn_seq }`
+- `StepId = { turn_id, step_seq }`
+
+This allows deterministic incrementing in reducer state and avoids cross-host UUID generation concerns.
+
 ## Scope
 
 1. Define core SDK schemas under `aos.agent/*`:
@@ -17,8 +55,10 @@ This stage resolves the primary gap from concern #1 (host-control underspecified
    - `aos.agent/RunId@1`
    - `aos.agent/TurnId@1`
    - `aos.agent/StepId@1`
+   - `aos.agent/SessionConfig@1`
    - `aos.agent/SessionLifecycle@1`
    - `aos.agent/HostCommand@1`
+   - `aos.agent/SessionEventKind@1`
    - `aos.agent/SessionState@1`
    - `aos.agent/SessionEvent@1`
 2. Define lifecycle states and transitions:
@@ -30,6 +70,223 @@ This stage resolves the primary gap from concern #1 (host-control underspecified
    - `step_epoch`
 5. Add crate scaffolding:
    - `crates/aos-agent-sdk` with shared types and reducer helper traits.
+
+## Proposed Schema Shapes (AIR-style)
+
+Below is the intended shape. Final field names can be adjusted, but the semantics should stay.
+
+### Identity Schemas
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/SessionId@1",
+  "type": { "text": {} }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/RunId@1",
+  "type": {
+    "record": {
+      "session_id": { "ref": "aos.agent/SessionId@1" },
+      "run_seq": { "nat": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/TurnId@1",
+  "type": {
+    "record": {
+      "run_id": { "ref": "aos.agent/RunId@1" },
+      "turn_seq": { "nat": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/StepId@1",
+  "type": {
+    "record": {
+      "turn_id": { "ref": "aos.agent/TurnId@1" },
+      "step_seq": { "nat": {} }
+    }
+  }
+}
+```
+
+### Lifecycle and Commands
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/SessionLifecycle@1",
+  "type": {
+    "variant": {
+      "Idle": { "unit": {} },
+      "Running": { "unit": {} },
+      "WaitingInput": { "unit": {} },
+      "Paused": { "unit": {} },
+      "Cancelling": { "unit": {} },
+      "Completed": { "unit": {} },
+      "Failed": { "unit": {} },
+      "Cancelled": { "unit": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/HostCommand@1",
+  "type": {
+    "record": {
+      "command_id": { "text": {} },
+      "issued_at_ns": { "nat": {} },
+      "command": {
+        "variant": {
+          "Steer": { "record": { "text": { "text": {} } } },
+          "FollowUp": { "record": { "text": { "text": {} } } },
+          "Reconfigure": { "record": { "patch": { "bytes": {} } } },
+          "Pause": { "unit": {} },
+          "Resume": { "unit": {} },
+          "Cancel": { "record": { "reason": { "option": { "text": {} } } } }
+        }
+      }
+    }
+  }
+}
+```
+
+`command_id` exists for idempotency and audit (host retries should not double-apply control).
+
+### Session State
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/SessionState@1",
+  "type": {
+    "record": {
+      "session_id": { "ref": "aos.agent/SessionId@1" },
+      "lifecycle": { "ref": "aos.agent/SessionLifecycle@1" },
+      "session_epoch": { "nat": {} },
+      "step_epoch": { "nat": {} },
+      "next_run_seq": { "nat": {} },
+      "next_turn_seq": { "nat": {} },
+      "next_step_seq": { "nat": {} },
+      "active_run_id": { "option": { "ref": "aos.agent/RunId@1" } },
+      "active_turn_id": { "option": { "ref": "aos.agent/TurnId@1" } },
+      "active_step_id": { "option": { "ref": "aos.agent/StepId@1" } },
+      "pending_steer": { "list": { "text": {} } },
+      "pending_follow_up": { "list": { "text": {} } },
+      "created_at_ns": { "nat": {} },
+      "updated_at_ns": { "nat": {} }
+    }
+  }
+}
+```
+
+### Event Envelope
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/SessionEvent@1",
+  "type": {
+    "record": {
+      "session_id": { "ref": "aos.agent/SessionId@1" },
+      "run_id": { "option": { "ref": "aos.agent/RunId@1" } },
+      "turn_id": { "option": { "ref": "aos.agent/TurnId@1" } },
+      "step_id": { "option": { "ref": "aos.agent/StepId@1" } },
+      "session_epoch": { "nat": {} },
+      "step_epoch": { "nat": {} },
+      "event": { "ref": "aos.agent/SessionEventKind@1" }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/SessionEventKind@1",
+  "type": {
+    "variant": {
+      "RunRequested": { "record": { "input_ref": { "hash": {} } } },
+      "RunStarted": { "unit": {} },
+      "HostCommandReceived": { "ref": "aos.agent/HostCommand@1" },
+      "HostCommandApplied": { "record": { "command_id": { "text": {} } } },
+      "LifecycleChanged": { "ref": "aos.agent/SessionLifecycle@1" },
+      "RunCompleted": { "unit": {} },
+      "RunFailed": { "record": { "code": { "text": {} }, "detail": { "text": {} } } },
+      "RunCancelled": { "record": { "reason": { "option": { "text": {} } } } }
+    }
+  }
+}
+```
+
+`SessionEvent` is an envelope so correlation fields are always present and uniform for tooling.
+
+## Runtime Use of IDs (example timeline)
+
+Given `session_id = "chat-42"`:
+
+1. First input starts `run_id = {session_id:"chat-42", run_seq:1}`.
+2. First model round starts `turn_id = {run_id, turn_seq:1}`.
+3. Steps progress:
+   - `step_id(..., step_seq:1)` for `LlmStepRequested`
+   - `step_id(..., step_seq:2)` for tool fan-out request
+   - `step_id(..., step_seq:3)` for result ingestion
+4. Host issues cancel:
+   - reducer sets lifecycle `Cancelling`
+   - increments `session_epoch`
+5. Late receipt from old step arrives with stale epoch:
+   - ignored deterministically.
+
+This is why IDs and epochs are both needed:
+- IDs give lineage,
+- epochs give safe invalidation boundaries.
+
+## Relationship to `tmp-llm-lib-code/02-coding-agent-loop-spec.md`
+
+That document is useful inspiration, but it is not a source of truth for AOS contracts.
+
+### Adopt (with adaptation)
+
+1. Explicit session lifecycle states.
+2. Host control queues (`steer`, `follow_up`) and next-boundary observation semantics.
+3. Limit-driven loop control (`max_turns`, round limits) as first-class config.
+4. Strong event-driven mindset for host integrations.
+
+### Do not adopt directly
+
+1. In-memory library session as the authority.
+   - In AOS, durable events + reducer state are authoritative.
+2. Provider/CLI-specific runtime assumptions (for example process-group kill behavior) at core schema level.
+   - Those belong in adapter/tool contracts, not base session schemas.
+3. A single generic `SessionEvent` map payload model.
+   - In AOS we need strongly typed, versioned schemas for replay safety.
+4. Implicit cancellation semantics.
+   - AOS requires explicit event ordering and epoch fences for deterministic stale-result handling.
+
+### Practical rule
+
+When the loop spec and AOS constraints differ, choose AOS invariants:
+- deterministic replay,
+- reducer-owned state transitions,
+- plan-only orchestration of privileged effects,
+- typed/versioned event contracts.
 
 ## Non-Goals
 
@@ -61,4 +318,3 @@ This stage resolves the primary gap from concern #1 (host-control underspecified
 3. `follow_up` is queued and consumed only after current run reaches `Idle`/`WaitingInput`.
 4. `cancel` transitions to `Cancelling` and ultimately `Cancelled`; stale late results are ignored by epoch fence.
 5. Replay test proves byte-identical final state for equivalent journal.
-
