--- a/spec/07-gc.md
+++ b/spec/07-gc.md
@@ -101,7 +101,8 @@ Root completeness is non-negotiable. If a required root is omitted, restore/GC c
 
 ## Baseline Snapshot Semantics
 
-P1 introduces baseline snapshots as semantic restore roots, not only replay acceleration hints.
+AgentOS uses a single restore contract: the active baseline snapshot is the semantic restore root.
+Snapshots are not "optimization-only" in this model.
 
 Baseline record shape:
 
@@ -109,6 +110,12 @@ Baseline record shape:
 - `height: nat`
 - `logical_time_ns: nat`
 - `receipt_horizon_height?: nat`
+
+World creation requirement:
+
+- A world MUST have an active baseline at creation time.
+- Unseeded world creation MUST write an initial baseline snapshot for empty/default runtime state.
+- Seeded/forked world creation MUST set the active baseline to the selected seed/fork snapshot.
 
 Restore from baseline:
 
@@ -127,7 +134,7 @@ Safety fence:
 Retention policy selects roots per world, typically:
 
 - active `manifest_hash`
-- retained snapshot roots (latest K, baseline set, or policy-defined set)
+- retained baseline roots (latest K baselines or policy-defined baseline set)
 - explicit `pinned_roots[]`
 
 For shared CAS, hosted GC should mark over the union of retained roots across all worlds before sweeping.
