protocol roots completed

--- a/spec/07-gc.md
+++ b/spec/07-gc.md
@@ -125,6 +125,7 @@ Restore from baseline:
 Safety fence:
 
 - A baseline is valid only when receipt horizon preconditions hold.
+- In v0.11 P1, implementations treat `receipt_horizon_height == height` as the promotable baseline shape.
 - Replay-or-die remains mandatory: baseline+tail replay MUST produce byte-identical state to full replay.
 
 ## Traversal Semantics
