--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -397,3 +397,168 @@ When the loop spec and AOS constraints differ, choose AOS invariants:
 3. `follow_up` is queued and consumed only after current run reaches `Idle`/`WaitingInput`.
 4. `cancel` transitions to `Cancelling` and ultimately `Cancelled`; stale late results are ignored by epoch fence.
 5. Replay test proves byte-identical final state for equivalent journal.
+
+## Normative Contract Update (Lock-In Addendum)
+
+The sections below are normative and override earlier ambiguities in this document.
+
+### Strongly typed profile identity in session/run config
+
+`provider_profile_id` must use `aos.agent/ProviderProfileId@1` instead of raw `text`.
+
+Updated shape:
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/SessionConfig@1",
+  "type": {
+    "record": {
+      "provider_profile_id": {
+        "option": { "ref": "aos.agent/ProviderProfileId@1" }
+      },
+      "provider": { "option": { "text": {} } },
+      "model": { "option": { "text": {} } },
+      "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
+      "max_tokens": { "option": { "nat": {} } }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/RunConfig@1",
+  "type": {
+    "record": {
+      "provider_profile_id": {
+        "option": { "ref": "aos.agent/ProviderProfileId@1" }
+      },
+      "provider": { "text": {} },
+      "model": { "text": {} },
+      "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
+      "max_tokens": { "option": { "nat": {} } }
+    }
+  }
+}
+```
+
+### Explicit parallel tool fan-out / fan-in batch contract
+
+Agents may issue multiple tool calls in one step. The reducer must track one active
+batch per tool round and must not request the next LLM step until the batch is
+settled.
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/ToolBatchId@1",
+  "type": {
+    "record": {
+      "step_id": { "ref": "aos.agent/StepId@1" },
+      "batch_seq": { "nat": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/ToolCallStatus@1",
+  "type": {
+    "variant": {
+      "Pending": { "unit": {} },
+      "Succeeded": { "unit": {} },
+      "Failed": { "record": { "code": { "text": {} }, "detail": { "text": {} } } },
+      "IgnoredStale": { "unit": {} },
+      "Cancelled": { "unit": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/ActiveToolBatch@1",
+  "type": {
+    "record": {
+      "tool_batch_id": { "ref": "aos.agent/ToolBatchId@1" },
+      "issued_at_step_epoch": { "nat": {} },
+      "expected_call_ids": { "set": { "text": {} } },
+      "call_status": {
+        "map": {
+          "key": { "text": {} },
+          "value": { "ref": "aos.agent/ToolCallStatus@1" }
+        }
+      },
+      "results_ref": { "option": { "hash": {} } }
+    }
+  }
+}
+```
+
+`SessionState@1` additions:
+
+- `active_tool_batch: option<aos.agent/ActiveToolBatch@1>`
+- `in_flight_effects: nat`
+- `max_in_flight_effects: nat`
+
+Deterministic rules:
+
+1. A batch is settled only when every `expected_call_id` is in terminal
+   `{Succeeded, Failed, IgnoredStale, Cancelled}`.
+2. Receipt ingestion order must not affect semantic `results_ref` ordering.
+   Results are normalized by call id order.
+3. Reducer may advance to next LLM step only after batch settled.
+
+### Pause / resume / cancel semantics with in-flight effects
+
+These rules are mandatory:
+
+1. `Pause` transitions `Running -> Paused` only at a step boundary.
+2. While `Paused`, no new effect intents are emitted.
+3. In-flight receipts during `Paused` are accepted and journaled, and only mutate
+   active batch status.
+4. `Resume` transitions `Paused -> Running` and continues from reducer state
+   without replaying already-settled call ids.
+5. `Cancel` transitions `Running|Paused -> Cancelling`, increments both
+   `session_epoch` and `step_epoch`, and blocks new effect intents.
+6. After `Cancelling`, terminal transition to `Cancelled` occurs when all in-flight
+   call ids are terminal or ignored stale.
+7. Any receipt tagged with stale `(run_id, session_epoch, step_epoch)` is recorded
+   for audit and marked `IgnoredStale`.
+
+### Long-run liveness and lease fence
+
+Long-running autonomous runs must use lease fencing:
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/RunLease@1",
+  "type": {
+    "record": {
+      "lease_id": { "uuid": {} },
+      "issued_at": { "time": {} },
+      "expires_at": { "time": {} },
+      "heartbeat_timeout_secs": { "nat": {} }
+    }
+  }
+}
+```
+
+`SessionState@1` additions:
+
+- `active_run_lease: option<aos.agent/RunLease@1>`
+- `last_heartbeat_at: option<time>`
+
+Rules:
+
+1. Host must renew lease before `expires_at` via a control command.
+2. If lease expires, reducer transitions to `Cancelling` with reason
+   `lease_expired`.
+3. Lease checks are deterministic: compare journaled `time` from command payload,
+   never wall clock.
