--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -338,3 +338,106 @@ Provider-specific behavior belongs in profile and adapter layers; reducer-facing
 4. `output_ref` normalized envelope and `raw_output_ref` provider payload are both populated where available.
 5. `max_tokens` omitted path is covered and succeeds for supported models/providers.
 6. Replay parity preserved (no nondeterministic fields leak into reducer decisions).
+
+## Normative Contract Update (Determinism and Tool Call Canonicalization)
+
+The sections below are normative and override earlier ambiguities in this document.
+
+### Typed `provider_profile_id` in LLM params
+
+`sys/LlmGenerateParams@1.provider_profile_id` must reference
+`aos.agent/ProviderProfileId@1`.
+
+```json
+{
+  "$kind": "defschema",
+  "name": "sys/LlmGenerateParams@1",
+  "type": {
+    "record": {
+      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
+      "provider": { "text": {} },
+      "model": { "text": {} },
+      "message_refs": { "list": { "hash": {} } },
+      "runtime": { "ref": "sys/LlmRuntimeArgs@1" },
+      "api_key": { "option": { "ref": "sys/TextOrSecretRef@1" } }
+    }
+  }
+}
+```
+
+### Resolver determinism boundary
+
+To preserve replay parity, resolver behavior is constrained:
+
+1. Catalog lookup may validate compatibility and produce diagnostics only.
+2. Catalog lookup may not inject or mutate cap/policy-relevant values.
+3. Resolved `provider`, `model`, `runtime`, and profile id in effect params are
+   the only authoritative values for cap/policy decisions.
+4. If required values are absent after applying profile defaults and per-call
+   overrides, resolver must fail with typed validation error rather than infer
+   host-side defaults.
+
+Updated precedence:
+
+1. Explicit per-call runtime fields.
+2. Profile defaults.
+3. No semantic defaults from host catalog/runtime.
+
+### Canonical normalized tool-call schema
+
+`tool_calls_ref` must point to a typed list of canonical tool calls. Mixed
+representations ("JSON string or object") are not allowed.
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/LlmToolCall@1",
+  "type": {
+    "record": {
+      "call_id": { "text": {} },
+      "tool_name": { "text": {} },
+      "arguments_ref": { "hash": {} },
+      "provider_call_id": { "option": { "text": {} } }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/LlmToolCallList@1",
+  "type": { "list": { "ref": "aos.agent/LlmToolCall@1" } }
+}
+```
+
+`arguments_ref` must reference canonical JSON object payload in CAS. Reducers must
+never parse provider-specific argument strings.
+
+Updated envelope:
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/LlmOutputEnvelope@1",
+  "type": {
+    "record": {
+      "assistant_text": { "option": { "text": {} } },
+      "tool_calls_ref": { "option": { "hash": {} } },
+      "reasoning_ref": { "option": { "hash": {} } }
+    }
+  }
+}
+```
+
+When `tool_calls_ref` is present, the referenced CAS payload must validate as
+`aos.agent/LlmToolCallList@1`.
+
+### Parallel tool intent normalization
+
+When a model returns multiple tool calls:
+
+1. Adapter must preserve model-emitted call ids as `call_id`.
+2. Adapter must canonicalize call ordering by emitted sequence and include that
+   sequence in serialized list order.
+3. Reducer must use `call_id` identity for idempotency and stale-result handling.
