--- a/roadmap/v0.10-agent-sdk/p2.3-tool-loop-safety-context-bounds.md
+++ b/roadmap/v0.10-agent-sdk/p2.3-tool-loop-safety-context-bounds.md
@@ -16,7 +16,8 @@ This stage resolves concerns #3 and #4.
    - max turns,
    - max tool rounds per turn,
    - max steps per run,
-   - max tool calls per step.
+   - max tool calls per step,
+   - max in-flight tool/effect calls per run.
 2. Loop detection contract:
    - deterministic signature model,
    - thresholds and reaction policy (`inject_steer`, `fail`, `complete_with_warning`).
@@ -26,6 +27,11 @@ This stage resolves concerns #3 and #4.
    - deterministic truncation marker with digest.
 4. Context pressure signaling:
    - standardized threshold events (for example 70/85/95%).
+5. Long-run liveness contract:
+   - run lease heartbeat,
+   - deterministic lease-expiry behavior.
+6. Parallel tool round settle contract:
+   - all-results fan-in barrier before next LLM step.
 
 ## Non-Goals
 
@@ -41,6 +47,8 @@ This stage resolves concerns #3 and #4.
    - `model_output_ref`
    - `truncation_meta`
 4. Deterministic truncation helper in `aos-agent-sdk`.
+5. Liveness helpers for lease heartbeat and expiry transitions.
+6. Batch-settle helpers for parallel tool rounds.
 
 ## Implementation Notes
 
@@ -48,6 +56,8 @@ This stage resolves concerns #3 and #4.
 - Preserve reducer/plan boundaries:
   - reducer decides loop/state transitions,
   - plan and adapters execute tool/LLM effects.
+- Receipt ingestion order must not affect settled batch result ordering; normalize by tool call id.
+- Backpressure must be deterministic: when `in_flight_effects >= max_in_flight_effects`, reducer defers additional fan-out until receipts reduce in-flight count.
 
 ## Exit Criteria
 
@@ -55,5 +65,6 @@ This stage resolves concerns #3 and #4.
 2. Full output remains available to operator channel via CAS.
 3. Limit exceed paths produce canonical terminal reasons.
 4. Loop detection triggers configured policy and avoids infinite ineffective cycles.
-5. Replay test verifies identical terminal state and bounded payload refs.
-
+5. Lease expiry deterministically transitions run to cancellation path.
+6. Parallel fan-out/fan-in waits for full batch settle before next LLM step.
+7. Replay test verifies identical terminal state and bounded payload refs.
