--- a/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
@@ -31,6 +31,9 @@ This stage resolves concern #5.
 5. Payload channel policy:
    - bounded model channel,
    - full-fidelity operator channel.
+6. Internal/external event mapping contract:
+   - `SessionEvent@1` as reducer input/internal lifecycle event,
+   - `AgentEvent@1` as external API/stream surface.
 
 ## Non-Goals
 
@@ -43,11 +46,14 @@ This stage resolves concern #5.
 2. Event emission helpers in `aos-agent-sdk`.
 3. Contract notes for HTTP/SSE surfaces (cursor, resume, duplicate handling).
 4. Trace/correlation rules aligned with existing `trace-get` workflow.
+5. Deterministic mapping spec from `SessionEvent@1` and journal entries to `AgentEvent@1`.
 
 ## Implementation Notes
 
 - Align with `roadmap/v0.10-agent-sdk/p9-stream.md` but keep deterministic boundaries explicit: journal-derived events are authoritative.
 - Ensure every externally visible transition maps to a canonical event kind.
+- `AgentEvent@1.event_seq` must be monotonic within `(session_id, run_id)` by journal order.
+- `AgentEvent@1.correlation_id` should equal run-scoped correlation id for all events in one run unless explicitly forked by tool call id.
 
 ## Exit Criteria
 
@@ -55,5 +61,5 @@ This stage resolves concern #5.
 2. No required correlation field is missing in integration tests.
 3. Resume-from-cursor works without duplication of durable events.
 4. Event schema evolution policy documented (additive changes, version bump rules).
-5. Event contract validated in at least one UI integration path and one headless harness.
-
+5. `SessionEvent@1 -> AgentEvent@1` mapping is complete for every externally visible transition.
+6. Event contract validated in at least one UI integration path and one headless harness.
