--- a/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
+++ b/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
@@ -31,6 +31,9 @@ This stage resolves concern #6 and finalizes cancellation semantics from concern
    - `Cancelling`,
    - late-result ignore,
    - `Cancelled`.
+5. In-flight parallel effect handling:
+   - partial completion classification,
+   - deterministic settle on cancel.
 
 ## Non-Goals
 
@@ -43,11 +46,26 @@ This stage resolves concern #6 and finalizes cancellation semantics from concern
 2. Retry policy guidance and helper interfaces in `aos-agent-sdk`.
 3. Cancellation sequence rules and epoch-fence enforcement helpers.
 4. Integration tests for deny/error/timeout/cancel behavior.
+5. Integration tests for partial parallel completion and cancel during fan-out.
 
 ## Implementation Notes
 
 - Keep all retry/cancel effects deterministic at reducer decision level.
 - Avoid hidden retry loops inside app-specific code paths.
+- Adapter retries are transport-level only and must not duplicate a committed tool call id.
+- Plan retries own effect re-dispatch policy; reducer retries own state-transition policy.
+- At most one layer may retry a given failure class in a given path (single owner rule).
+
+### Cancellation sequence (normative)
+
+1. Host command accepted and journaled with `command_id`.
+2. Reducer transitions to `Cancelling` and bumps epoch fence.
+3. No new effect intents are emitted after transition to `Cancelling`.
+4. In-flight receipts are ingested:
+   - matching epoch/run: mark call terminal (`Succeeded` or `Failed`),
+   - stale epoch/run: mark `IgnoredStale`.
+5. Run transitions to `Cancelled` when all call ids in active batch are terminal or ignored stale.
+6. Terminal event includes typed cancellation cause and correlation ids.
 
 ## Exit Criteria
 
@@ -55,5 +73,5 @@ This stage resolves concern #6 and finalizes cancellation semantics from concern
 2. Retry ownership is tested and unambiguous (no duplicate retry loops across layers).
 3. Cancel during in-flight operations reaches `Cancelled` deterministically and ignores stale late completions.
 4. Policy/cap deny paths are distinguishable by typed error code and correlation IDs.
-5. Replay parity holds for failed and cancelled runs.
-
+5. Partial-success/partial-failure fan-out during cancellation produces deterministic final classification.
+6. Replay parity holds for failed and cancelled runs.
